use Quarkus Log. Remove usage of String.format() and String.concat()